--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Project Catelogue of Prince A. Segbefia, Software Developer.">
   <meta name="Keywords" content="Prince Segbefia software developer project portfolio  Vineyard Utah">
-  <title>Prince A. Segbefia | Software Developer | Project Catalogue</title>
+  <title>Prince A. Segbefia | Software Developer | My Projects</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css">
 
@@ -52,7 +52,62 @@
 
 <body class="index-body">
   <header>
-    <div>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Works
+              </a>
+              <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Work & Pay</a></li>
+                <li><a class="dropdown-item" href="#">BookMe</a></li>
+                <li><a class="dropdown-item" href="#">W & P App</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/">This Website</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Work-In-Progress
+              </a>
+              <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Yodem Forex</a></li>
+                <li><a class="dropdown-item" href="#">Ideahub App</a></li>
+                <li><a class="dropdown-item" href="#">Kardiocare App</a></li>
+                <li><a class="dropdown-item" href="#">Team App</a></li>
+                <li><a class="dropdown-item" href="#">Library App</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Contact</a>
+            </li>
+          </ul>
+          <span class="navbar-nav nav-product">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-5">
+                <li class="nav-item">
+                  <a href="https://www.linkedin.com/feed/" class="fa fa-linkedin"></a>
+                  <a href="https://www.facebook.com/prince.segbefia" class="fa fa-facebook"></a>
+                  <a href="https://github.com/Prem2vee" class="fa fa-github" aria-hidden="true"></a>
+                  <a href="https://twitter.com/prem2vee" class="fa fa-twitter"></a>
+                </li>
+              </ul>
+            </div>
+          </span>
+        </div>
+      </div>
+    </nav>
+
+
+    <!-- <div>
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -93,7 +148,7 @@
           </span>
         </div>
       </nav>
-    </div>
+    </div> -->
   </header>
   <section class="c-hero">
     <div class="row c-hero__box">
@@ -252,7 +307,7 @@
 
 
   </main>
-  <footer >
+  <footer>
     <div class="container">
       <div class="row">
         <div class="d-flex justify-content-center">
