--- a/about.html
+++ b/about.html
@@ -1,53 +1,237 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>About Me</title>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Project Catelogue of Prince A. Segbefia, Software Developer.">
+  <meta name="Keywords" content="Prince Segbefia software developer project portfolio  Vineyard Utah">
+  <title>Prince A. Segbefia | Software Developer | My Projects</title>
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="css/styles.css">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- Additional CSS must be placed after Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css">
 
-    <!-- Favicons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <!-- Favicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  </head>
-  <body>
-    <h1>About Page is a Work in Progress</h1>
-    <div>
-      <img src="images/construction2.jpeg" alt="construction image" >
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+
+</head>
+
+<body class="index-body">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Works
+              </a>
+              <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Work & Pay</a></li>
+                <li><a class="dropdown-item" href="#">BookMe</a></li>
+                <li><a class="dropdown-item" href="#">W & P App</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="/">This Website</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/about">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Work-In-Progress
+              </a>
+              <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Yodem Forex</a></li>
+                <li><a class="dropdown-item" href="#">Ideahub App</a></li>
+                <li><a class="dropdown-item" href="#">Kardiocare App</a></li>
+                <li><a class="dropdown-item" href="#">Team App</a></li>
+                <li><a class="dropdown-item" href="#">Library App</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
+            </li>
+          </ul>
+          <span class="navbar-nav nav-product">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-5">
+                <li class="nav-item">
+                  <a href="https://www.linkedin.com/feed/" class="fa fa-linkedin"></a>
+                  <a href="https://www.facebook.com/prince.segbefia" class="fa fa-facebook"></a>
+                  <a href="https://github.com/Prem2vee" class="fa fa-github" aria-hidden="true"></a>
+                  <a href="https://twitter.com/prem2vee" class="fa fa-twitter"></a>
+                </li>
+              </ul>
+            </div>
+          </span>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <div class="container" style="color: white">
+      <div class="row">
+        <div class="col-md-6 bio">
+          <img class="bio-image" src="images/edem.jpg" alt="Edem image">
+        </div>
+        <div class="col-md-6 bio">
+          <h1 class="biotext">I'm Prince, a Full Stack Web Developer enthused about developing web and mobile
+            apps remotely in the mountains of Vineyard,Utah.</h1>
+          <div class="bio_text">
+            <p> Prior to joining the software community, I worked as a Chartered Accountant and a member of
+              the ICAG. <br>Its been a dream to become a software developer hence the change in career path
+              and I currently work as a freelancer.</p>
+          </div>
+          <div class="bio_text">
+            <p>I spend most of my time perfecting existing knowledge whiles familiarizing with new trends.<br> Coming from Africa, I
+              also enjoy guiding and helping the youth to take on coding as a path to poverty alleviation and success.</p>
+          </div>
+          <div class="bio_text">
+            <p>When I am not coding I like to go to the movie theatre, watch basketball games and play 8 Ball Pool </p>
+          </div>
+        </div>
+      </div>
     </div>
-    <a href="/"><button type="button" class="btn btn-primary">Return Home</button></a>
 
+    <div class="container" style="color: white">
+      <div class="row">
+        <div class="brief" style="color: white">
+          <h1 class="brief1">A brief academic history</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex align-items-center justify-content-start hist-r">
+          <div class="flex-shrink-0">
+            <img class="capp-icon" src="/images/nucampd.png" alt="...">
+          </div>
+          <div class="flex-grow-1 ms-3" style="float:left">
+            <h1 class="school">Nucamp Coding Bootcamp</h1>
+            <div class="flex-grow-1 ms-3">
+              <h1 class="school">Software Developer Certificate</h1>
+              <div class="flex-grow-1 ms-3">
+                <h1 class="school">2020 to 2021</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex align-items-center hist-q">
+          <div class="flex-shrink-0">
+            <img class="bapp-icon" src="/images/icag.jpg" alt="...">
+          </div>
+          <div class="flex-grow-1 ms-3" style="float:left">
+            <h1 class="school">Institute of Chartered Accountants, Ghana</h1>
+            <div class="flex-grow-1 ms-3">
+              <h1 class="school">Membership Certificate</h1>
+              <div class="flex-grow-1 ms-3">
+                <h1 class="school">2016 to 2012</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex align-items-center hist-p">
+          <div class="flex-shrink-0">
+            <img class="bapp-icon" src="/images/ug.png" alt="...">
+          </div>
+          <div class="flex-grow-1 ms-3" style="float:left">
+            <h1 class="school">University of Ghana</h1>
+            <div class="flex-grow-1 ms-3">
+              <h1 class="school">Mphil Accounting</h1>
+              <div class="flex-grow-1 ms-3">
+                <h1 class="school">2014 to 2016</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex align-items-center hist-o ">
+          <div class="flex-shrink-0">
+            <img class="bapp-icon" src="/images/ug.png" alt="...">
+          </div>
+          <div class="flex-grow-1 ms-3" style="float:left">
+            <h1 class="school">University ofGhana</h1>
+            <div class="flex-grow-1 ms-3">
+              <h1 class="school">BSc Accounting</h1>
+              <div class="flex-grow-1 ms-3">
+                <h1 class="school">2019 to 2012</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
 
+  </main>
 
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="d-flex justify-content-center">
+          <div class="ftext text-center">Freelance ! rope me in. I like to learn something new!</div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span class="lspan">let's chat</span></div>
+        </div>
+      </div>
+    </div>
 
+  </footer>
 
+  <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 
+</body>
 
-
-
-
-
-
-
-
-    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
-  </body>
 </html>
