--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Works
               </a>
               <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
@@ -72,7 +72,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="/about">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -87,7 +87,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Contact</a>
+              <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
             </li>
           </ul>
           <span class="navbar-nav nav-product">
@@ -105,56 +105,12 @@
         </div>
       </div>
     </nav>
-
-
-    <!-- <div>
-      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/" id="navbarDropdownMenuLink" role="button" style="margin-left: 50px" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
-              <ul class="dropdown-content" aria-labelledby="navbarDropdownMenuLink">
-                <div class="dropdown-content">
-                  <a class="dropdown-item" href="https://shielded-gorge-23800.herokuapp.com/">Newsletter Signup</a>
-                  <a class="dropdown-item" href="#">Work&Pay Ltd</a>
-                  <a class="dropdown-item" href="#">Yodem Ltd</a>
-                </div>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/wip">WIP</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact</a>
-            </li>
-          </ul>
-          <span class="navbar-nav nav-product">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-5">
-                <li class="nav-item">
-                  <a href="https://www.linkedin.com/feed/" class="fa fa-linkedin"></a>
-                  <a href="https://www.facebook.com/prem2vee" class="fa fa-facebook"></a>
-                  <a href="https://github.com/Prem2vee" class="fa fa-github" aria-hidden="true"></a>
-                  <a href="https://twitter.com/prem2vee" class="fa fa-twitter"></a>
-                </li>
-              </ul>
-            </div>
-          </span>
-        </div>
-      </nav>
-    </div> -->
   </header>
   <section class="c-hero">
     <div class="row c-hero__box">
       <div class="column">
-        <h1 class="c-hero__title justify-center">I’m Prince Segbefia,</h1>
-        <h1 class="c-hero__title justify-center">a full stack web developer.</h1>
+        <h1 class="c-hero__title justify-center">Hi. I’m Prince.</h1>
+        <h1 class="c-hero__title justify-center">A Web Developer.</h1>
         <div class="c-hero-sub col-lg-8">I develop both Mobile and Web Applications that help solve daily business and social challenges.
           My goal is to develop end-to-end applications that challenge the status quo.</div>
       </div>
@@ -280,7 +236,7 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            <div class="d-flex justify-content-start"">
+            <div class="d-flex justify-content-start">
               <img src=" images/mobile-dev.png" alt="mobile image">
             </div>
           </div>
@@ -304,8 +260,6 @@
         </div>
       </div>
     </section>
-
-
   </main>
   <footer>
     <div class="container">
