--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <li><a class="dropdown-item" href="#">Work & Pay</a></li>
                 <li><a class="dropdown-item" href="#">BookMe</a></li>
                 <li><a class="dropdown-item" href="#">W & P App</a></li>
-                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item" href="/">This Website</a></li>
               </ul>
             </li>
@@ -269,6 +271,14 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="#" class="lspan">let's chat</a></span></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 phone">
+          <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
+        </div>
+        <div class="col-md-6 mail">
+          <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@prince.segbefia.com</a>
         </div>
       </div>
     </div>
