--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
               also enjoy guiding and helping the youth to take on coding as a path to poverty alleviation and success.</p>
           </div>
           <div class="bio_text">
-            <p>When I am not coding I like to go to the movie theatre, watch basketball games and play 8 Ball Pool </p>
+            <p>When I am not coding I like to go to the movie theatre, watch basketball games and play 8 Ball Pool. </p>
           </div>
         </div>
       </div>
@@ -288,6 +288,14 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="ltext text-center">Lets make history whiles breaking existing boundries. Send me a message and <span><a href="#" class="lspan">let's chat</a></span></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 phone">
+          <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
+        </div>
+        <div class="col-md-6 mail">
+          <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@prince.segbefia.com</a>
         </div>
       </div>
     </div>
