--- a/index.html
+++ b/index.html
@@ -76,20 +76,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/about">About</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Classics
-              </a>
-              <ul class="dropdown-menu dropdown-content" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Yodem Forex</a></li>
-                <li><a class="dropdown-item" href="#">Ideahub App</a></li>
-                <li><a class="dropdown-item" href="#">Kardiocare App</a></li>
-                <li><a class="dropdown-item" href="#">Team App</a></li>
-                <li><a class="dropdown-item" href="#">Library App</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/classics">Classics</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
+              <a class="nav-link active" aria-current="page" href="#contactme">Contact</a>
             </li>
           </ul>
           <span class="navbar-nav nav-product">
@@ -274,10 +265,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 phone">
+        <div class="col-md-4" id="contactme">
+          <a class="contact" href="#telephone"><i class="fa fa-address-book fa-lg"></i>Contacts :</a>
+        </div>
+        <div id="telephone" class="col-md-4 phone">
           <a class="Nphone" href="tel:+233246783336"><i class="fa fa-phone fa-lg"></i>929-423-3552</a>
         </div>
-        <div class="col-md-6 mail">
+        <div class="col-md-4 mail">
           <a class="Nvlope" href="mailto:works@prince.segbefia.com"><i class="fa fa-envelope fa-lg"></i>works@prince.segbefia.com</a>
         </div>
       </div>
