--- a/classics.html
+++ b/classics.html
@@ -110,7 +110,7 @@
           <div class="mean-title text-center">Classics.</div>
         </div>
         <div class="d-flex justify-content-center">
-          <div class="mean-sub text-center">A behind the scenes snapshot of my work in progess,
+          <div class="mean-sub text-center">A behind the scenes snapshot of my journey into software development,
             source of inspiration, questions about the future of software & random life updates
             captured in HTTP status codes.
           </div>
@@ -132,9 +132,9 @@
             <h1 class="cls-title">103 Early Hints.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
             <p class="text-cls">I guess every journey has a beginning right ! Mine started with quest of converting
-              scanned PDF files to Word format in order to perform a word search for my lecturer's PhD thesis.
+              scanned financial statements saved in PDF format to Word format in order to perform a word search for my lecturer's PhD thesis.
               I naively did a simple copy and paste. Psssttt, like you guessed, it didn't work.</p>
-            <p class="text-cls">I spent several hours trying to impress my lecturer and that made me discover a world of coding approaches I didnt understand.
+            <p class="text-cls">I spent several hours trying to impress my lecturer and that made me discover a world of coding approaches I didn't understand.
               Being curious I tried to understand the code however after a quick scan at the codes; this is a waste of my time I concluded.</p>
             <p class="text-cls">I won't tell you how it ended but the fire to study software development ignited that very moment.</p>
           </div>
@@ -147,55 +147,55 @@
             <h1 class="cls-title">428 Precondition Required.</h1>
             <p class="date-cls"><i class="fa fa-calendar"></i>August 06, 2018</p>
             <p class="text-cls">Five years went by like the wind. However, I was focused on my Accounting
-              profession and ended up working in an IT company but in accounts department. Then I signed up for a Python
-            course that never got started. However I inquired the preconditions necessary for
-              to succeed. The list inlcudes the following
+              profession and ended up working in an IT company, Accounts Department. Then I signed up for a Python
+            course that never got started. However, researching into the preconditions required to study software development
+              revealed the following;
               <ul class="text-cls">
-                <li>Self-Reliance</li>
+                <li class="text-sub-title">Self-Reliance</li>
                 <p>Keeping in mind that the only way to eat an elephant is a bite at a time, pick something and start.
                 There will be times where you want to give up, or have someone else show you how to do something,
                 but the more you resist those urges and try and fail on your own, the greater your longterm success.</p>
-                <li>Choose a Scripting Language</li>
+                <li class="text-sub-title">Choose a Scripting Language</li>
                 <p>So which language to begin with? That has a lot to do with what you’re trying to accomplish,
                   but there are three that stand out for their multi-faceted applications, consistent utility
                   and accessibility to beginners. These three are Python, Ruby and JavaScript.</p>
-                <li>Logic</li>
+                <li class="text-sub-title">Logic</li>
                 <p>So how do you build up your logic skills? Treat them like muscles, and exercise them.
                    There are tools which gives you challenges/problems that will develop your
                    reasoning. Another way to build logic skills is through conditional thinking, which
                    essentially means, if this, then that.</p>
-                <li>Attention to Detail</li>
+                <li class="text-sub-title">Attention to Detail</li>
                 <p> What you won’t NEED to have learned, or have prerequisite abilities, will be mitigated
-                  by how closely you can pay attention to details. The understand of the interconnectivity
+                  by how closely you can pay attention to details. The understanding of the interconnectivity
                   in commands, general awareness and lingual precision are all extremely important parts
-                  of a coder’s toolkit</p>
-                <li>Recognition of Stupidity</li>
+                  of a coder’s toolkit.</p>
+                <li class="text-sub-title">Recognition of Stupidity</li>
                 <p>This could also be “understanding how computers think.” We’ve all been told not to
                   make assumptions, but assuming common sense on behalf of a computer while programming
                   or coding is a recipe for disaster.</p>
-                <li>Abstract Thinking</li>
+                <li class="text-sub-title">Abstract Thinking</li>
                 <p>Abstract thinking is thinking done without the object of the thought present,
                   or even physical. It’s a foundation of coding. Because the written code, and
                   what it produces can never be observed and measured physically, successful
                   coders have to develop an ability to think abstractly, in larger, more comparative
                   ways than they may be used to.</p>
-                <li>Patience</li>
+                <li class="text-sub-title">Patience</li>
                 <p>Coding is extremely difficult. Nothing that you’ve read here, or read somewhere else should be
                   interpreted differently. At all stages, but especially when beginning, you should expect to feel
                   extreme frustration. However, your ability to withstand that frustration, and move through it,
                   without letting it discourage you will serve you in all that you do.</p>
-                <li>Strong Memory</li>
+                <li class="text-sub-title">Strong Memory</li>
                 <p>While working with the same languages, you’ll internalize syntax, and it will feel less like using
                   memory and more second nature to recall important commands.</p>
-                <li>Scientific Method</li>
+                <li class="text-sub-title">Scientific Method</li>
                 <p>The problems/challenges of coding can seem infinite, daunting, and impossible to begin.
-                  That’s where using the scientific method to break down obstacles and projects themselves can become extremely helpful</p>
-                <li>Communication and Empathy</li>
+                  That’s where using the scientific method to break down obstacles and projects themselves can become extremely helpful.</p>
+                <li class="text-sub-title">Communication and Empathy</li>
                 <p>Perhaps the most overlooked aspect of programming has little to do with the manual and mental labor of writing code.
                   Coding is an insular world that effects our lives more each day. Coders need to be able to work with, and explain what
-                  they do to employers, clients, consumers and coworkers that don’t understand what they do</p>
+                  they do to employers, clients, consumers and coworkers that don’t understand what they do.</p>
               </ul>
-              <p class="text-cls">Source:<a class="text-cls" href="https://www.computersciencezone.org/10-skills-necessary-coding/">10 Skills Necessary For Coding</a></p>
+              <a class="text-clss" href="https://www.computersciencezone.org/10-skills-necessary-coding/">computersciencezone.org</a>
             </p>
           </div>
         </div>
@@ -203,26 +203,12 @@
       <div class="row">
         <div class="cls-103">
           <div class="flex-shrink-0">
-            <img class="icon-cls" src="/images/switch.png" align="left" alt="...">
-            <h1 class="cls-title">101 Switching Protocols.</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
-            <p class="text-cls">I guess every journey has a beginning right ! Mine started with quest of converting
-              scanned PDF files to Word format in order to perform a word search for my lecturer's PhD thesis.
-              I naively did a simple copy and paste. Psssttt, like you guessed, it didn't work.</p>
-            <p class="text-cls">I spent several hours trying to impress my lecturer and that made me discover a world of coding approaches I didnt understand.
-              Being curious I tried to understand the code however after a quick scan at the codes; this is a waste of my time I concluded.</p>
-            <p class="text-cls">I won't tell you how it ended but the fire to study software development ignited that very moment.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="cls-103">
-          <div class="flex-shrink-0">
-            <img class="icon-cls" src="/images/continue.jpg" align="left" alt="...">
-            <h1 class="cls-title">100 Continue</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
-            <p class="text-cls">To continue in the path i sometime wonder what the future holds in software development
-              in terms of artificial inteelligence </p>
+            <img class="icon-cls" src="/images/detour.png" align="left" alt="...">
+            <h1 class="cls-title">308 Permanent Redirect.</h1>
+            <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2019</p>
+            <p class="text-cls">Enough was enough. I resolved to leave it all behind and set myself on the path that I have always wanted to journey.</p>
+            <p class="text-cls">This time I need to commit everything in order to attain some sort of self satisfaction.</p>
+              <p class="text-cls">Hence I redirected my career path permanently to study software development.</p>
           </div>
         </div>
       </div>
@@ -231,20 +217,40 @@
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/choices.png" align="left" alt="...">
             <h1 class="cls-title">300 Multiple Choices</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
-            <p class="text-cls">To continue in the path i sometime wonder what the future holds in software development
-              in terms of artificial inteelligence </p>
+            <p class="date-cls"><i class="fa fa-calendar"></i>April 18, 2020</p>
+            <p class="text-cls">Several options available in the software development space made it difficult to arrive at a decision on which option to choose.
+            Should I do a self-study? Or attend a bootcamp? In both situations, which language do I focus on?</p>
+            <p class="text-cls">Friends in the industry kept giving conflicting information.
+          Start with Python someone said. Another insisted on Javascript. Web applications will help you land a job faster. Others insisted, Mobile development is
+        the way to go, it is the future.</p>
+        <p class="text-cls">Just like every other profession, the software space if full of multiple choices. </p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="cls-103">
           <div class="flex-shrink-0">
-            <img class="icon-cls" src="/images/detour.png" align="left" alt="...">
-            <h1 class="cls-title">308 Permanent Redirect (RFC 7538)</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
-            <p class="text-cls">To continue in the path i sometime wonder what the future holds in software development
-              in terms of artificial inteelligence </p>
+            <img class="icon-cls" src="/images/switch.png" align="left" alt="...">
+            <h1 class="cls-title">101 Switching Protocols.</h1>
+            <p class="date-cls"><i class="fa fa-calendar"></i>May 27, 2020</p>
+            <p class="text-cls">Finally a decision was made to go with self-study. Bought a course on Udemy and started Full Stack Web Devlopment.
+            3 months into the course momentum began to slow and I hadn't covered much.</p>
+            <p class="text-cls">Work shedules didnt make it any easier. Didn't have anybody to work with,
+            no course mates to share ideas with like I was used to in the traditional way of learning. I was told it was a lonely path to thread upon
+            but I did envisage it was going to be this lonely.</p>
+            <p class="text-cls">I asked myself, is this not all I have ever wanted? What has changed? Did I switch protocols too early?</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="cls-103">
+          <div class="flex-shrink-0">
+            <img class="icon-cls" src="/images/upgrade.jpg" align="left" alt="...">
+            <h1 class="cls-title">426 Upgrade Required.</h1>
+            <p class="date-cls"><i class="fa fa-calendar"></i>November 5, 2020</p>
+            <p class="text-cls">It's time to upgrade since the server has refused to perform my request using the current protocols. I upgraded by signing up
+            to Nucamp Coding Bootcamp. This turned out to be the best upgrade ever.</p>
+            <p class="text-cls">At last I was back on track to fulfill my life's long dream.</p>
           </div>
         </div>
       </div>
@@ -252,8 +258,10 @@
         <div class="cls-103">
           <div>
             <img class="icon-cls" src="/images/music.png" align="left" alt="...">
-            <h1 class="cls-title">415 Unsupported Media Type (RFC 7231) </h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
+            <h1 class="cls-title">415 Unsupported Media Type </h1>
+            <p class="date-cls"><i class="fa fa-calendar"></i>December 25, 2020</p>
+            <p class="text-cls">To prevent boredom and loneliness during my coding journey, music has been my greatest source of inspiration.
+              Most of my study hours were made less stressfull by these raggae legends; Lucky Dube & Bob Marley.</p>
             <audio id="audio" tabindex="0" controls=""></audio>
             <div id="ss_elem_list">
               <ul id="playlist">
@@ -362,9 +370,21 @@
           <div class="flex-shrink-0">
             <img class="icon-cls" src="/images/ok.jpg" align="left" alt="...">
             <h1 class="cls-title">200 OK</h1>
-            <p class="date-cls"><i class="fa fa-calendar"></i>June 16, 2013</p>
-            <p class="text-cls">To continue in the path i sometime wonder what the future holds in software development
-              in terms of artificial inteelligence </p>
+            <p class="date-cls"><i class="fa fa-calendar"></i>May 1, 2021</p>
+            <p class="text-cls">OK, now we are here and you are able to access this page because I have successfully completed
+              the Bootcamp, which is the preliminary stage of becoming a guru in software development. Its been a wonderful journey and it all began with a step.  </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="cls-103">
+          <div class="flex-shrink-0">
+            <img class="icon-cls" src="/images/continue.jpg" align="left" alt="...">
+            <h1 class="cls-title">100 Continue</h1>
+            <p class="date-cls"><i class="fa fa-calendar"></i>May 7, 2021</p>
+            <p class="text-cls">To continue, I sometimes wonder what the future holds in software development for me. Do I focus on Front End or Back End, Web or Mobile?
+              For now, I am a Full Stack Developer but I don't want to be a Jack of all trades and a Master of none, hence I need to specialize.</p>
+              <p class="text-cls">I've been told that a programmer's direction is usually highly dependent on his work environment. Nonetheless, I hope to find some clarity as I learn more.</p>
           </div>
         </div>
       </div>
